<resources>
    <string name="app_name">Astra Ride</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Edit">Edit</string>
    <string name="Phone">Phone No</string>
    <string name="UploadImage">Upload Image</string>
    <string name="delete_account">Delete Account</string>
    <string name="Signout">Sign out</string>
    <string name="menu_add_product">Add New</string>
    <string name="get_offer">Get Offer</string>
    <string name="Title">title</string>
    <string name="ItemTitle">Title</string>
    <string name="Brand">Brand</string>
    <string name="Location">Location</string>
    <string name="Category">Category</string>
    <string name="PCapavity">Passenger Capacity</string>
    <string name="Color">Body Color</string>
    <string name="Details">Other details</string>
    <string name="Price">Price per hour</string>
    <string name="RentalFee">Rental fee</string>
    <string name="Specs">Specifications</string>
    <string name="SeeReviews"><![CDATA[See reviews >>>]]></string>
    <string name="Rent">Rent this</string>
    <string name="title_activity_all_reviews">AllReviews</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="expiry">Exp Date</string>
    <string name="amount">Amount</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="terms_and_condition">Terms and condittions</string>
    <string name="pay">Pay</string>
    <string name="Card_Details">CardDetails</string>
    <string name="CardDetails">Card Details</string>
    <string name="Rate">How was your experience?</string>
    <string name="rating">Rating</string>
    <string name="Delete">Delete</string>
    <string name="Save">Save</string>
    <string name="Date">Date</string>
    <string name="my_orders">My Orders</string>
    <string name="Inventory">Inventory</string>
    <string name="hint_resource">hint</string>
    <string name="register">Create Account</string>
    <string name="About">About Us</string>
    <string name="about_des">Astra Ride has a new face. After more than 20 years in business, we decided to give a fresher look to our brand and our services. With our fully renewed fleet of vehicles, we are ready to meet all expectations and requirements.</string>
    <string name="rental">Rental fee per hour</string>
    <string name="cencel">Cancel</string>
</resources>