<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Inventory"
            android:icon="@drawable/ic_baseline_store_24"
            android:title="@string/Inventory" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_orders" />
    </group>

    <item android:title="Contact us">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_perm_contact_calendar_24"
                android:title="About us">
            </item>
        </menu>
    </item>
</menu>