<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.products.EditItem">

    <ScrollView
        android:id="@+id/itmE_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/ItemCard"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:cardBackgroundColor="@color/white"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:layout_margin="10dp"
        app:cardMaxElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false">
        <ImageView
            android:id="@+id/Item_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/thin_line_black_camera_logo_260nw_627479624"
            android:onClick="captureImage" />
    </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ItemTitle"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/editTextBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Brand"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <Spinner
                android:id="@+id/category"
                android:layout_height="50dp"
                android:layout_width="160dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </Spinner>

            <EditText
                android:id="@+id/editTextCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/PCapavity"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/editTextBodyColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Color"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/editTextTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Location"
                android:inputType="textPostalAddress"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />


            <EditText
                android:id="@+id/editTextFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rental"
                android:inputType="numberDecimal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/editTextDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Details"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/GreenMain"
                    android:onClick="Save"
                    android:text="@string/Save"></Button>

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btnRed"
                    android:onClick="delete"
                    android:text="@string/Delete"></Button>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>