<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".ui.profile.EditProfile">

    <ImageView
        android:id="@+id/dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/bt_ic_cardholder_name" />

    <ScrollView
        android:id="@+id/signup_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/ButtonGreen"
                android:onClick="edit"
                android:text="@string/Edit"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="captureImage"
                android:text="@string/UploadImage"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Name"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Phone" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Phone Number"
                android:inputType="phone"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Save"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btnRed"
                android:onClick="deleteAccount"
                android:text="@string/delete_account" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>