<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ItemViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.products.AdminItemView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ItemViewLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageViewItem"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/placeholder" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/ItemViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/ItemTitle"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ItemViewLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Location"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/ItemViewPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Price"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/ItemViewSpecs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/Specs"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/ItemView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/Brand"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/ItemViewBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="10dp"
                        android:text="@string/Specs"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/ItemView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/Category"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/ItemViewCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="10dp"
                        android:text="@string/Specs"
                        android:textSize="18sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/ItemView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/Color"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/ItemViewColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="10dp"
                        android:text="@string/Specs"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/ItemView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/PCapavity"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/ItemViewCapacity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="10dp"
                        android:text="@string/Specs"
                        android:textSize="18sp" />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/Details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ItemViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="Details"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ItemViewReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/SeeReviews"
                android:textColor="#2196F3"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:padding="5dp">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Edit" />

    </RelativeLayout>


</FrameLayout>