<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemCard"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/common_google_signin_btn_icon_dark_normal"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="5dp"
                android:text="@string/Name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="41dp"
                android:drawablePadding="2dp"
                android:text="@string/Location"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVName"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="41dp"
                android:drawablePadding="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="5dp"
                android:text="@string/Price"
                android:textColor="@color/theme_green"
                android:textSize="15sp"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>